fix: Fixed jumping problem, use router-link tag instead of a tag

--- a/src/assets/style/common.less
+++ b/src/assets/style/common.less
@@ -9,8 +9,9 @@
         outline: 2px solid @primary-color;
     }
 }
+html,
 body {
-    min-height: 100vh;
+    min-height: 100%;
 }
 li {
     list-style: none;
